# email-sends-service

./: .env.example  README.md  pyproject.toml
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_detail.html
config/: settings.py  urls.py
email_sends/: admin.py  apps.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
email_sends/management/commands/: do_mailings.py
email_sends/migrations/: 0001_initial.py  0002_alter_client_comment.py  0003_message_mailingsettings_mailinglog.py  0004_alter_mailingsettings_start_at.py  0005_alter_mailinglog_mailing.py  0006_mailingsettings_creator.py  0007_client_creator_message_creator_and_more.py  0008_alter_mailingsettings_options.py  0009_alter_mailingsettings_options.py
email_sends/templates/email_sends/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailinglog_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
email_sends/views/: __init__.py  clients.py  home.py  mailing.py  mailing_logs.py  messages.py
fixtures/: db.json  groups.json
static/css/: profile.css
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py  fillgroups.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templatetags/: media_path.py
(+7 files in other folders)
